kube-lionel/hello-kubernetes/hello-kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: lionel
  labels:
    app: hello-kubernetes
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: hello-kubernetes
